feat: create base for user section

--- a/day-1/css/style.css
+++ b/day-1/css/style.css
@@ -10,7 +10,6 @@ body {
     font-family: "Montserrat", serif;
 }
 
-
 ul {
     list-style-type: none;
 }
@@ -28,8 +27,8 @@ a {
 /* STILE PER COLONNA PULSANTI PER L'UTENTE + LOGO */
 .col-user {
     background-color: #000000;
-    flex:1;
     padding-left: 15px;
+    flex: 1;
 }
 
 .user-menu {
@@ -58,10 +57,47 @@ a {
     height: 30px;
 }
 
+.user-playlist {
+    margin-top:30px;
+    padding-left:15px ;
+}
+
+.user-playlist h4 {
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+.user-playlist ul {
+    padding-top: 10px;
+}
+
+.user-playlist ul li {
+    padding-top: 15px;
+}
+
+.user-playlist ul li a {
+    text-transform: capitalize;
+}
+
 #logo img {
     padding:12px 35px 12px 0px;
 }
 
+.user {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    max-width: 100%;
+}
+
+
+.download {
+    background-color: red;
+}
+
+.user-info {
+    background-color: blue;
+}
 
 
 
