fix: fix sidebar width, fix color sidebar and add container for sidebar

--- a/day-1/css/style.css
+++ b/day-1/css/style.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
 }
 
 /* COMMON */
 body {
     font-family: "Montserrat", serif;
+    height: 100vh;
 }
 
 ul {
@@ -16,7 +16,7 @@ ul {
 
 a {
     text-decoration: none;
-    display: inline-block;
+    color: #949494;
 }
 
 img {
@@ -31,11 +31,11 @@ img {
 /* STILI degli altri elementi per creare la struttura dio base */
 .col-content{
     background-color: #131923;
-    flex: 7;
+    flex:1;
 }
 
 footer {
-    height: 85px;
+    min-height: 85px;
     background-color: #282828;
 }
 
@@ -66,6 +66,8 @@ footer {
     flex-direction: column;
     min-height: 0;
     overflow: auto;
+    font-weight: 500;
+    height: 100%;
 }
 
 .user-menu {
@@ -95,11 +97,13 @@ footer {
 .user-menu ul li img {
     width: 30px;
     height: 30px;
+    opacity: 0.3;
 }
 
 .user-playlist {
     margin-top:30px;
-    padding-left:15px ;
+    padding-left:15px;
+    padding-bottom:35px;
 }
 
 .icon-add-playlist {
@@ -113,6 +117,7 @@ footer {
 .user-playlist h4 {
     text-transform: uppercase;
     font-weight: 800;
+    color: #ffffff;
 }
 
 .user-playlist ul {
@@ -174,6 +179,7 @@ footer {
 
     .col-user {
         padding:0px;
+        height: 100%;
     }
 
     .logo-desktop {
@@ -196,7 +202,6 @@ footer {
     .user-menu ul li:hover {
         border-left: 2px solid #b8f166;
     }
-    
     
     .user-menu ul li a span {
         display: none;
