--- a/day-2/css/style.css
+++ b/day-2/css/style.css
@@ -39,7 +39,7 @@ footer {
     background-color: #282828;
 }
 
-.header {
+.content-header {
     background-color: #0e131c;
     min-height: 90px;
 }
@@ -167,6 +167,26 @@ footer {
  PER L'UTENTE + LOGO */
 
 
+/* STILE PER CONTENUTO PRINCIPALE DELLA PAGINA (HEADER) */
+.content-header {
+    background-color: #0e131c;
+    display: flex;
+    justify-content: end;
+    padding: 30px 15px;
+}
+
+button {all: unset;}
+
+.upgrade-btn {
+    color: white;
+    border: 2px solid #ffffff;
+    border-radius: 50px;
+    padding: 15px 40px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
+}
+ 
 
 
  /* MEDIA QUERY FOR MOBILE */
