--- a/day-2/css/style.css
+++ b/day-2/css/style.css
@@ -186,7 +186,26 @@ button {all: unset;}
     font-weight: 600;
     font-size: 13px;
 }
- 
+
+.genre-menu {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+}
+
+.genre-menu ul {
+    display: flex;
+    gap: 25px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.genre-menu ul li:hover {
+    border-bottom:2px solid #b8f166;
+}
+
+
 
 
  /* MEDIA QUERY FOR MOBILE */
