--- a/day-2/css/style.css
+++ b/day-2/css/style.css
@@ -225,13 +225,48 @@ button {all: unset;}
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
 
-.recently-container h2 {
+.card p.song-title {
+    text-align: center;
+    color: #ffffff;
+    padding-top: 20px;
+    font-weight: bold;
+}
+
+.card {
+    flex-shrink: 0;
+    flex-grow: 0;
+    width: 175px;
+}
+
+.card p.song-sub-title {
+    text-align: center;
+    color: #b1b1b1;
+    padding-top: 5px;
+    font-weight: bold;
+    font-size: 12px
+}
+
+.recently-container .recently-title {
     padding-bottom: 35px;
     color: #ffffff;
 }
+
+.create-for {
+    color: #ffffff;
+    padding-bottom: 5px;
+}
+
+.create-for-subtitle {
+    color: #b1b1b1;
+    font-size: 12px;
+    padding-bottom: 35px;
+    font-weight: 700;
+}
+
+
 
 
 
