--- a/day-2/css/style.css
+++ b/day-2/css/style.css
@@ -195,7 +195,7 @@ button {all: unset;}
     color: white;
     border: 2px solid #ffffff;
     border-radius: 50px;
-    padding: 15px 40px;
+    padding: 10px 30px;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 13px;
@@ -223,7 +223,7 @@ button {all: unset;}
 }
 
 .recently-container {
-    padding-left: 20px;
+    padding: 0 20px;
 }
 
 .recently-song {
@@ -241,8 +241,6 @@ button {all: unset;}
 }
 
 .card {
-    flex-shrink: 0;
-    flex-grow: 0;
     width: 175px;
 }
 
@@ -280,6 +278,7 @@ button {all: unset;}
     .genre-menu {
        justify-content: center;
     }
+
 
 
  }
